--- a/03_Ch_4_Orthogonality/055-least_squares.ipynb
+++ b/03_Ch_4_Orthogonality/055-least_squares.ipynb
@@ -156,15 +156,499 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Ch_4_Orthogonality/055-least_squares.ipynb)"
+    ":::{prf:example} \n",
+    ":label: ex_ALA_5_12\n",
+    "Consider the linear system\n",
+    "\\begin{align*}\n",
+    "x_1 + 2x_2 &= 1, \\\\\n",
+    "3x_1 - x_2 + x_3 &= 0, \\\\\n",
+    "-x_1 + 2x_2 + x_3 &= -1, \\\\\n",
+    "x_1 - x_2 - 2x_3 &= 2, \\\\\n",
+    "2x_1 + x_2 - x_3 &= 2.\n",
+    "\\end{align*}\n",
+    "consisting of 5 equations in 3 unknowns. The coeﬃcient matrix and right-hand side are\n",
+    "$$\n",
+    "A = \\bm\n",
+    "1 & 2 & 0 \\\\\n",
+    "3 & -1 & 1 \\\\\n",
+    "-1 & 2 & 1 \\\\\n",
+    "1 & -1 & -2 \\\\\n",
+    "2 & 1 & -1\n",
+    "\\em, \\quad\n",
+    "\\mathbf{b} = \\bm\n",
+    "1 \\\\ 0 \\\\ -1 \\\\ 2 \\\\ 2\n",
+    "\\em\n",
+    "$$\n",
+    "\n",
+    "A direct application of Gaussian Elimination shows that $\\vv b \\in $img$A$, and so the system is incompatible — it has no solution. Of course, to apply the least squares method, we are not required to check this in advance. If the system has a solution, it is the least squares solution too, and the least squares method will ﬁnd it.\n",
+    "\n",
+    "Let us ﬁnd the least squares solution based on the Euclidean norm, uisng the [XLS formula](#least_squares_thm_eqn).\n",
+    "$$\n",
+    "K = A^T A = \\bm\n",
+    "16 & -2 & -2 \\\\\n",
+    "-2 & 11 & 2 \\\\\n",
+    "-2 & 2 & 7\n",
+    "\\em, \\quad\n",
+    "\\mathbf{f} = A^T \\mathbf{b} = \\bm\n",
+    "8 \\\\ 0 \\\\ -7\n",
+    "\\em\n",
+    "$$\n",
+    "Solving the $3 \\times 3$ system of normal equations $K \\vv x = \\vv f$ by Gaussian Elimination, we ﬁnd\n",
+    "$$\n",
+    "\\mathbf{x}^* = K^{-1}\\mathbf{f} \\approx \\bm .4119 & .2482 & -.9532 \\em^T\n",
+    "$$\n",
+    "to be the least squares solution to the system. The least squares error is\n",
+    "$$\n",
+    "\\|\\mathbf{b} - A\\mathbf{x}^*\\|^2 \\approx \\| \\bm -.0917, .0342, .1313, .0701, .0252 \\em ^T\\|^2 \\approx .03236.\n",
+    "$$\n",
+    "which is reasonably small — indicating that the system is, roughly speaking, not too\n",
+    "incompatible.\n",
+    "\n",
+    "An alternative strategy is to begin by orthonormalizing the columns of $A$ using Gram–\n",
+    "Schmidt. We can then apply the [orthogonal projection formula](./054-proj_subspace.ipynb#orth_basis_proj_eqn) to construct the\n",
+    "same least squares solution. We suggest you to try this strategy as an exercise.\n",
+    ":::"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "::::{exercise}\n",
+    ":label: ex_LAA_1\n",
+    "\n",
+    "Find a least-squares solution of the inconsistent system $A\\mathbf{x} = \\mathbf{b}$ for\n",
+    "\n",
+    "$$\n",
+    "A = \\begin{bmatrix}\n",
+    "4 & 0 \\\\\n",
+    "0 & 2 \\\\\n",
+    "1 & 1\n",
+    "\\end{bmatrix}, \\quad\n",
+    "\\mathbf{b} = \\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "0 \\\\\n",
+    "11\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    ":::{solution} ex_LAA_1\n",
+    ":class: dropdown\n",
+    "\n",
+    "To use [normal equations (NE)](#norm_eqn), compute:\n",
+    "\n",
+    "$$\n",
+    "A^TA = \\begin{bmatrix}\n",
+    "4 & 0 & 1 \\\\\n",
+    "0 & 2 & 1\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "4 & 0 \\\\\n",
+    "0 & 2 \\\\\n",
+    "1 & 1\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "17 & 1 \\\\\n",
+    "1 & 5\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "A^T\\mathbf{b} = \\begin{bmatrix}\n",
+    "4 & 0 & 1 \\\\\n",
+    "0 & 2 & 1\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "0 \\\\\n",
+    "11\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "19 \\\\\n",
+    "11\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Then the equation $A^TA\\mathbf{x} = A^T\\mathbf{b}$ becomes\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "17 & 1 \\\\\n",
+    "1 & 5\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "x_1 \\\\\n",
+    "x_2\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "19 \\\\\n",
+    "11\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Row operations can be used to solve this system, but since $A^TA$ is invertible and $2 \\times 2$, it is probably faster to compute\n",
+    "\n",
+    "$$\n",
+    "(A^TA)^{-1} = \\frac{1}{84}\n",
+    "\\begin{bmatrix}\n",
+    "5 & -1 \\\\\n",
+    "-1 & 17\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "and then to solve $A^TA\\mathbf{x} = A^T\\mathbf{b}$ as\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bar{\\mathbf{x}} &= (A^TA)^{-1}A^T\\mathbf{b} \\\\\n",
+    "&= \\frac{1}{84}\n",
+    "\\begin{bmatrix}\n",
+    "5 & -1 \\\\\n",
+    "-1 & 17\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "19 \\\\\n",
+    "11\n",
+    "\\end{bmatrix} = \n",
+    "\\frac{1}{84}\n",
+    "\\begin{bmatrix}\n",
+    "84 \\\\\n",
+    "168\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "1 \\\\\n",
+    "2\n",
+    "\\end{bmatrix}\n",
+    "\\end{align*}\n",
+    ":::\n",
+    "::::\n",
+    "\n",
+    "\n",
+    "::::{exercise}\n",
+    ":label: ex_LAA_2\n",
+    "\n",
+    "Find a least-squares solution of $A\\mathbf{x} = \\mathbf{b}$ for\n",
+    "\n",
+    "$$\n",
+    "A = \\begin{bmatrix}\n",
+    "1 & 1 & 0 & 0 \\\\\n",
+    "1 & 1 & 0 & 0 \\\\\n",
+    "1 & 0 & 1 & 0 \\\\\n",
+    "1 & 0 & 1 & 0 \\\\\n",
+    "1 & 0 & 0 & 1 \\\\\n",
+    "1 & 0 & 0 & 1\n",
+    "\\end{bmatrix}, \\quad\n",
+    "\\mathbf{b} = \\begin{bmatrix}\n",
+    "-3 \\\\\n",
+    "-1 \\\\\n",
+    "0 \\\\\n",
+    "2 \\\\\n",
+    "5 \\\\\n",
+    "1\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    ":::{solution} ex_LAA_2\n",
+    ":class: dropdown\n",
+    "\n",
+    "Compute\n",
+    "\n",
+    "$$\n",
+    "A^TA = \n",
+    "\\begin{bmatrix}\n",
+    "1 & 1 & 1 & 1 & 1 & 1 \\\\\n",
+    "1 & 1 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 1 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 1 & 1\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "1 & 1 & 0 & 0 \\\\\n",
+    "1 & 1 & 0 & 0 \\\\\n",
+    "1 & 0 & 1 & 0 \\\\\n",
+    "1 & 0 & 1 & 0 \\\\\n",
+    "1 & 0 & 0 & 1 \\\\\n",
+    "1 & 0 & 0 & 1\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "6 & 2 & 2 & 2 \\\\\n",
+    "2 & 2 & 0 & 0 \\\\\n",
+    "2 & 0 & 2 & 0 \\\\\n",
+    "2 & 0 & 0 & 2\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "A^T\\mathbf{b} = \n",
+    "\\begin{bmatrix}\n",
+    "1 & 1 & 1 & 1 & 1 & 1 \\\\\n",
+    "1 & 1 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 1 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 1 & 1\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "-3 \\\\\n",
+    "-1 \\\\\n",
+    "0 \\\\\n",
+    "2 \\\\\n",
+    "5 \\\\\n",
+    "1\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "4 \\\\\n",
+    "-4 \\\\\n",
+    "2 \\\\\n",
+    "6\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "The augmented matrix for $A^TA\\mathbf{x} = A^T\\mathbf{b}$ is\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "6 & 2 & 2 & 2 & 4 \\\\\n",
+    "2 & 2 & 0 & 0 & -4 \\\\\n",
+    "2 & 0 & 2 & 0 & 2 \\\\\n",
+    "2 & 0 & 0 & 2 & 6\n",
+    "\\end{bmatrix} \\sim\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 & 1 & 3 \\\\\n",
+    "0 & 1 & 0 & -1 & -5 \\\\\n",
+    "0 & 0 & 1 & -1 & -2 \\\\\n",
+    "0 & 0 & 0 & 0 & 0\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "The general solution is $x_1 = 3 - x_4$, $x_2 = -5 + x_4$, $x_3 = -2 + x_4$, and $x_4$ is free. So the general least-squares solution of $A\\mathbf{x} = \\mathbf{b}$ has the form\n",
+    "\n",
+    "$$\n",
+    "\\hat{\\mathbf{x}} = \n",
+    "\\begin{bmatrix}\n",
+    "3 \\\\\n",
+    "-5 \\\\\n",
+    "-2 \\\\\n",
+    "0\n",
+    "\\end{bmatrix} + x_4\n",
+    "\\begin{bmatrix}\n",
+    "-1 \\\\\n",
+    "1 \\\\\n",
+    "1 \\\\\n",
+    "1\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    ":::\n",
+    "::::\n",
+    "\n",
+    "\n",
+    ":::::{exercise}\n",
+    ":label: ex_LAA_3\n",
+    "\n",
+    "Given $A$ and $\\mathbf{b}$ as in [](#ex_LAA_1), determine the least-squares error in the least-squares solution of $A\\mathbf{x} = \\mathbf{b}$.\n",
+    "\n",
+    "::::{solution} ex_LAA_3\n",
+    ":class: dropdown \n",
+    "\n",
+    "From [](#ex_LAA_1),\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{b} = \\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "0 \\\\\n",
+    "11\n",
+    "\\end{bmatrix}\n",
+    "\\quad \\text{and} \\quad\n",
+    "A\\hat{\\mathbf{x}} = \\begin{bmatrix}\n",
+    "4 & 0 \\\\\n",
+    "0 & 2 \\\\\n",
+    "1 & 1\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "1 \\\\\n",
+    "2\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "4 \\\\\n",
+    "4 \\\\\n",
+    "3\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Hence\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{b} - A\\hat{\\mathbf{x}} = \n",
+    "\\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "0 \\\\\n",
+    "11\n",
+    "\\end{bmatrix} - \n",
+    "\\begin{bmatrix}\n",
+    "4 \\\\\n",
+    "4 \\\\\n",
+    "3\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "-2 \\\\\n",
+    "-4 \\\\\n",
+    "8\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\|\\mathbf{b} - A\\hat{\\mathbf{x}}\\| = \\sqrt{(-2)^2 + (-4)^2 + 8^2} = \\sqrt{84}\n",
+    "$$\n",
+    "\n",
+    "The least-squares error is $\\sqrt{84}$. For any $\\mathbf{x}$ in $\\mathbb{R}^2$, the distance between $\\mathbf{b}$ and the vector $A\\mathbf{x}$ is at least $\\sqrt{84}$. See [](#ex_LAA_3_fig). Note that the least-squares solution $\\hat{\\mathbf{x}}$ itself does not appear in the figure.\n",
+    "\n",
+    ":::{figure}../figures/05-ex_LAA_3.jpg\n",
+    ":label:ex_LAA_3_fig\n",
+    ":alt:ex_LAA_3\n",
+    ":width: 300px\n",
+    ":align: center\n",
+    ":::\n",
+    "\n",
+    "::::\n",
+    ":::::\n",
+    "\n",
+    "\n",
+    "::::{exercise}\n",
+    ":label: exact\n",
+    "\n",
+    "Find a least-squares solution of $A\\mathbf{x} = \\mathbf{b}$ for\n",
+    "\n",
+    "$$\n",
+    "A = \\begin{bmatrix}\n",
+    "1 & -2 \\\\\n",
+    "5 & 3\n",
+    "\\end{bmatrix}, \\quad\n",
+    "\\mathbf{b} = \\begin{bmatrix}\n",
+    "8 \\\\\n",
+    "1\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    ":::{solution} exact\n",
+    ":class: dropdown\n",
+    "\n",
+    "Compute\n",
+    "\n",
+    "$$\n",
+    "A^TA = \n",
+    "\\begin{bmatrix}\n",
+    "26 & 13 \\\\ 13 & 13\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "A^T\\mathbf{b} = \n",
+    "\\begin{bmatrix}\n",
+    "1 & 5 \\\\\n",
+    "-2 & 3\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "8 \\\\ 1\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "13 \\\\ -13\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "The augmented matrix for $A^TA\\mathbf{x} = A^T\\mathbf{b}$ is\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "26 & 13 & 13 \\\\ 13 & 13 & -13\n",
+    "\\end{bmatrix} \\sim\n",
+    "\\begin{bmatrix}\n",
+    "26 & 13 & 13 \\\\ 0 & 6.5 & -19.5\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Using backsubstitution, the solution to the above system is $x_2 = \\frac{-19.5}{6.5} = -3$, $x_1 = \\frac{13 - 13x_2}{26} = 2$. So the least-squares solution of $A\\mathbf{x} = \\mathbf{b}$ is \n",
+    "\n",
+    "$$\n",
+    "\\vv x\n",
+    "\\begin{bmatrix}\n",
+    "2 \\\\ -3\n",
+    "\\end{bmatrix}.\n",
+    "$$\n",
+    "\n",
+    "The least squares error is computed as below\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{b} - A\\hat{\\mathbf{x}} = \n",
+    "\\begin{bmatrix}\n",
+    "8 \\\\ 1\n",
+    "\\end{bmatrix} - \n",
+    "\\begin{bmatrix}\n",
+    "1 & -2 \\\\\n",
+    "5 & 3\n",
+    "\\end{bmatrix}\\begin{bmatrix}\n",
+    "2 \\\\ -3\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "8 \\\\ 1\n",
+    "\\end{bmatrix} - \\begin{bmatrix}\n",
+    "8 \\\\ 1\n",
+    "\\end{bmatrix} = \\begin{bmatrix}\n",
+    "0 \\\\ 0\n",
+    "\\end{bmatrix} \\Rightarrow \\|\\mathbf{b} - A\\hat{\\mathbf{x}}\\| = 0.\n",
+    "$$\n",
+    "\n",
+    "Hence, $\\hat{\\vv x}$ is an exact solution for the equation $A \\vv x = \\vv b$, which we found out by solving least squares! Therefore, if an exact solution exists for $A \\vv x = \\vv b$, then, our least squares solution strategy indeed finds it!\n",
+    "\n",
+    "\n",
+    ":::\n",
+    "::::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python break!\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Least squares\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[1, -2],\n",
+    "              [5, 3]])\n",
+    "b = np.array([8, 1]).reshape((-1,1))\n",
+    "\n",
+    "# x = np.array([0.41758, 0.85714]).reshape((-1,1))\n",
+    "\n",
+    "x = np.array([2, -3]).reshape((-1,1))\n",
+    "\n",
+    "(13 - 13*(-3))/26"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Ch_4_Orthogonality/055-least_squares.ipynb)"
+   ]
   }
  ],
  "metadata": {
