--- a/03_Ch_4_Orthogonality/055-least_squares.ipynb
+++ b/03_Ch_4_Orthogonality/055-least_squares.ipynb
@@ -568,7 +568,7 @@
     "Using backsubstitution, the solution to the above system is $x_2 = \\frac{-19.5}{6.5} = -3$, $x_1 = \\frac{13 - 13x_2}{26} = 2$. So the least-squares solution of $A\\mathbf{x} = \\mathbf{b}$ is \n",
     "\n",
     "$$\n",
-    "\\vv x\n",
+    "\\vv x = \n",
     "\\begin{bmatrix}\n",
     "2 \\\\ -3\n",
     "\\end{bmatrix}.\n",
@@ -608,23 +608,76 @@
    "metadata": {},
    "source": [
     "#### Python break!\n",
-    "\n"
+    "\n",
+    "In the following code, we show how to use `np.linalg.lstsq` in Python to solve the least squares problem, and also how to obtain the solution by solving a linear system (`np.linalg.solve`) as illustrated in [](#ex_ALA_5_12). If there is more than one solution to the least squares problem, then the two strategies ( `np.linalg.lstsq` and `np.linalg.solve`) might possibly return different solutions $\\hat{\\vv x}$ because each NumPy function uses a different numerical strategy to obtain $\\hat{\\vv x}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2.0"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "A: \n",
+      " [[ 1 -2]\n",
+      " [ 5  3]] \n",
+      "b:  [8 1]\n",
+      "\n",
+      "lstsq function\n",
+      "\n",
+      "Solution (x): \n",
+      " [ 2. -3.] \n",
+      "Residual:  []\n",
+      "\n",
+      "solving a linear system\n",
+      "\n",
+      "Solution (x): \n",
+      " [ 2. -3.] \n",
+      "Residual:  0.0\n",
+      "\n",
+      "A: \n",
+      " [[1 1 0 0]\n",
+      " [1 1 0 0]\n",
+      " [1 0 1 0]\n",
+      " [1 0 1 0]\n",
+      " [1 0 0 1]\n",
+      " [1 0 0 1]] \n",
+      "b:  [-3 -1  0  2  5  1]\n",
+      "\n",
+      "lstsq function\n",
+      "\n",
+      "Solution (x): \n",
+      " [ 0.5 -2.5  0.5  2.5] \n",
+      "Residual:  []\n",
+      "\n",
+      "solving a linear system\n",
+      "\n",
+      "Solution (x): \n",
+      " [-6.  4.  7.  9.] \n",
+      "Residual:  11.999999999999998\n",
+      "\n",
+      "A: \n",
+      " [[4 0]\n",
+      " [0 2]\n",
+      " [1 1]] \n",
+      "b:  [ 2  0 11]\n",
+      "\n",
+      "lstsq function\n",
+      "\n",
+      "Solution (x): \n",
+      " [1. 2.] \n",
+      "Residual:  [84.]\n",
+      "\n",
+      "solving a linear system\n",
+      "\n",
+      "Solution (x): \n",
+      " [1. 2.] \n",
+      "Residual:  84.0\n"
+     ]
     }
    ],
    "source": [
@@ -632,15 +685,49 @@
     "\n",
     "import numpy as np\n",
     "\n",
+    "def least_squares_linalg(A, b):\n",
+    "\n",
+    "    print(\"\\nA: \\n\", A, \"\\nb: \", b)\n",
+    "\n",
+    "    print(\"\\nlstsq function\\n\")\n",
+    "    \n",
+    "    x, residual, rank, sing_val = np.linalg.lstsq(A, b, rcond=None)\n",
+    "    # residual = 0 if rank of A < size of x (or) number of rows of A <= size of x \n",
+    "    print(\"Solution (x): \\n\", x, \"\\nResidual: \", residual)\n",
+    "\n",
+    "def least_squares(A, b):\n",
+    "    print(\"\\nsolving a linear system\\n\")\n",
+    "\n",
+    "    x = np.linalg.solve(A.T @ A, A.T @ b)\n",
+    "    \n",
+    "    residual = np.linalg.norm(A@x- b)**2\n",
+    "    \n",
+    "    print(\"Solution (x): \\n\", x, \"\\nResidual: \", residual)\n",
+    "\n",
     "A = np.array([[1, -2],\n",
     "              [5, 3]])\n",
-    "b = np.array([8, 1]).reshape((-1,1))\n",
+    "b = np.array([8, 1])\n",
     "\n",
-    "# x = np.array([0.41758, 0.85714]).reshape((-1,1))\n",
+    "least_squares_linalg(A, b)\n",
+    "least_squares(A, b)\n",
     "\n",
-    "x = np.array([2, -3]).reshape((-1,1))\n",
+    "A1 = np.array([[1, 1, 0, 0],\n",
+    "              [1, 1, 0, 0],\n",
+    "              [1, 0, 1 , 0],\n",
+    "              [1, 0, 1, 0],\n",
+    "              [1, 0, 0, 1],\n",
+    "              [1, 0, 0, 1]])\n",
+    "b1 = np.array([-3, -1, 0, 2, 5, 1])\n",
     "\n",
-    "(13 - 13*(-3))/26"
+    "# Notice the difference in both the solutions\n",
+    "least_squares_linalg(A1, b1)\n",
+    "least_squares(A1, b1)\n",
+    "\n",
+    "A2 = np.array([[4, 0], [0, 2],[1, 1]])\n",
+    "b2 = np.array([2, 0, 11])\n",
+    "\n",
+    "least_squares_linalg(A2, b2)\n",
+    "least_squares(A2, b2)"
    ]
   },
   {
@@ -649,6 +736,13 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Ch_4_Orthogonality/055-least_squares.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
