--- a/03_Ch_4_Orthogonality/055-least_squares.ipynb
+++ b/03_Ch_4_Orthogonality/055-least_squares.ipynb
@@ -16,7 +16,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: Orthogonal Projection, Decomposition, Least Squares\n",
+    "keywords: Orthogonal Projection, Linear Systems, Least Squares\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -45,7 +45,7 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- the least squares problem\n",
+    "- the least squares problem and how to solve it\n",
     "- how the least squares problem relates to a solving an approximate linear system"
    ]
   },
