finished diagonalization notes, still need to add exercises

--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/087-diagonalization.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/087-diagonalization.ipynb
@@ -159,10 +159,96 @@
     "![alt text](../figures/04-linear_transformation_basis.png)\n",
     "\n",
     ":::{prf:example} Rewriting an linear transformation in another basis\n",
-    ":label: eigenbasis-existence-thm\n",
+    ":label: eigen-ex8\n",
     "\n",
-    "The eigenvectors of a matrix $A \\in \\mathbb{R}^{n\\times n}$ form a basis for $\\mathbb{R}^n$ if and only if, for each distinct eigenvalue $\\lambda_i$, the algebraic multiplicty of $\\lambda_i$ matches its geometric multiplicity $\\dim V_{\\lambda_i}$.\n",
-    ":::"
+    "Consider $A = \\bm 1&2\\\\0&1\\em$ and $f(\\vv x) = A\\vv x$. This transformation maps $\\bm x_1\\\\x_2\\em \\mapsto \\bm x_1 + 2x_2 \\\\x_2\\em$. Consider the basis $\\vv{b_1} = \\bm 1\\\\2\\em, \\vv{b_2} = \\bm 0\\\\1\\em$ illustrated in blue below:\n",
+    "\n",
+    "![alt text](../figures/04-blue_basis.png)\n",
+    "\n",
+    "The basis matrix $B$ is $B = \\bm 1&0\\\\2&1\\em$, and $B^{-1} = \\bm 1&0\\\\-2&1 \\em$. The matrix representation for $g(\\vv y)$ is then:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    B^{-1}AB &= \\bm 1&0\\\\-2&1\\em \\bm 1&2\\\\0&1\\em \\bm 1&0\\\\2&1\\em\\\\\n",
+    "    &= \\bm 5&2\\\\-8&-3\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "and the map $g(\\vv y) = B^{-1}AB\\vv y$ takes $\\bm y_1\\\\y_2\\em \\mapsto \\bm 5y_1 + 2y_2\\\\-8y_1 - 3y_2\\em$.\n",
+    ":::\n",
+    "\n",
+    "# Diagonalization\n",
+    "\n",
+    "In the above example, our change of basis didn't really help us understand what the linear transformation $f(\\vv x)$ is doing any better than our starting point. However, we'll see how that if we use the basis defiend by the eigenvectors of a matrix, some magic happens! We'll start with an example, and then extract out a general conclusion.\n",
+    "\n",
+    ":::{prf:example} Rewriting an linear transformation in an eigenbasis\n",
+    ":label: eigen-ex9\n",
+    "\n",
+    "Consider the linear transformation $h(x_1, x_2) = \\bm x_1 - x_2 \\\\ 2x_1 + 4x_2\\em$. It has matrix representation $A = \\bm 1&-1\\\\2&4\\em$4 with respect to the standard basis of $\\mathbb{R}^2$. \n",
+    "\n",
+    "The eigenvalues of $A$ are computed by solving $\\det(A - \\lambda I) = 0$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\det \\bm 1 - \\lambda & -1\\\\2 & 4 - \\lambda\\em  (1 - \\lambda)(4 - \\lambda) + 2 = \\lambda^2 - 5\\lambda + 6 = (\\lambda - 2)(\\lambda - 3) = 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "so that $\\lambda_1 = 2$ and $\\lambda_2 = 3$. Solving the appropriate eigenvector equations $(A - \\lambda_i I)\\vv{v_i} = \\vv 0$, we obtain the following eigenvalue/eigenvector pairs:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\lambda_1 = 2, \\vv{v_1} = \\bm 1\\\\-1\\em \\quad\\text{and}\\quad \\lambda_2 = 3, \\vv{v_2} = \\bm 1\\\\-2\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Let's see what happens if we express $A$ in coordinate system defined by the [eigenbasis](#eigenbasis-defn) $V = \\bm \\vv{v_1} & \\vv{v_2} \\em = \\bm 1&1\\\\-1&-2\\em$.\n",
+    "\n",
+    "First, we compute $V^{-1} = \\frac{1}{1(-2) - 1(-1)}\\bm -2&-1 \\\\1&1\\em = \\bm 2&1\\\\-1&-1\\em$, and then find $V^{-1}AV = \\bm 2&1\\\\-1&-1\\em \\bm 1&-1 \\\\2&4\\em \\bm 1&1\\\\-1&-2\\em = \\bm 2&0\\\\0&3\\em$.\n",
+    "\n",
+    "This matrix is diagonal! THis means it applies a simple stretching action in the coordinates defined by the eigenvectors. The eigenvalues for this new matrix are also $\\lambda_1 = 2$ and $\\lambda_2 = 3$, but in this case, eigenvectors are much simpler: $\\vv{\\hat{v_1}} = \\bm 1\\\\0\\em$ and $\\vv{\\hat{v_2}} = \\bm 0\\\\1\\em$.\n",
+    ":::\n",
+    "\n",
+    "The above example showed us an example of a very important property of an eigenbasis: they *diagonalize* the original matrix representative! Working with diagonal matrices is very convenient, and thus diagonalization is very useful when we can do it.\n",
+    "\n",
+    "Although we only saw a $2\\times 2$ example, the idea is applicable to general $n\\times n$ matrices, in the idea of *diagonalizable* matrices.\n",
+    "\n",
+    ":::{prf:definition} Diagonalizable\n",
+    ":label: diagonalizable-defn\n",
+    "\n",
+    "We say that a square matrix $A$ is *diagonalizable* if there exists a nonsingular matrix $V$ and a diagonal matrix $D = \\text{diag}(\\lambda_1, ..., \\lambda_n)$ such that\n",
+    "\n",
+    "\\begin{align*}\\label{expr:diagonalizable}\n",
+    "v^{-1} A V = D \\quad\\text{or equivalently} A = VDV^{-1} \\tag{D}\n",
+    "\\end{align*}\n",
+    ":::\n",
+    "\n",
+    "Let's try to understand condition [(D)](expr:diagonalizable) a little bit more by writing it as \n",
+    "\n",
+    "\\begin{align*}\n",
+    "AV = VD\n",
+    "\\end{align*}\n",
+    "\n",
+    "Now, for $V = \\bm \\vv{v_1} & \\vv{v_2} & \\dots & \\vv{v_n} \\em$, this becomes: \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bm A\\vv{v_1} & A\\vv{v_2} & \\dots & A\\vv{v_n}\\em = \\bm \\lambda_1 \\vv{v_1} & \\lambda_2 \\vv{v_2} & \\dots & \\lambda_n \\vv{v_n} \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Focusing on the $k^{th}$ column of this $n\\times n$ matrix equation, we see something familiar:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "A\\vv{v_k} = \\lambda_k \\vv{v_k},\n",
+    "\\end{align*}\n",
+    "\n",
+    "that is, the columns of $V$ must be eigenvectors, and the diagonal elements $\\lambda_i$ must be eigenvectors! Therefore, we immediately get the following characterization of when a matrix is diagonalizable:\n",
+    "\n",
+    ":::{prf:theorem} A necessary and sufficient condition for diagonalizability\n",
+    ":label: diagonalizable-thm\n",
+    "\n",
+    "A matrix $A \\in \\mathbb{R}^{n\\times n}$ is diagonalizable if and only if it has $n$ linearly independent eigenvectors.\n",
+    "\n",
+    "Equivalently, $A$ is digonalizable if and only if, for each eigenvalue $\\lambda$, its [geometric multiplicity matches its algebraic multiplicity](#multiplicity-defn).\n",
+    ":::\n",
+    "\n",
+    "Next, \n",
+    "\n",
+    "TODO worked example of a nondigaonalizable and diagonalizable matrix\n",
+    "\n"
    ]
   }
  ],
