worked exercises for diagonalization

--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/087-diagonalization.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/087-diagonalization.ipynb
@@ -213,7 +213,7 @@
     "We say that a square matrix $A$ is *diagonalizable* if there exists a nonsingular matrix $V$ and a diagonal matrix $D = \\text{diag}(\\lambda_1, ..., \\lambda_n)$ such that\n",
     "\n",
     "\\begin{align*}\\label{expr:diagonalizable}\n",
-    "v^{-1} A V = D \\quad\\text{or equivalently} A = VDV^{-1} \\tag{D}\n",
+    "V^{-1} A V = D \\quad\\text{or equivalently}\\quad A = VDV^{-1} \\tag{D}\n",
     "\\end{align*}\n",
     ":::\n",
     "\n",
@@ -243,12 +243,65 @@
     "A matrix $A \\in \\mathbb{R}^{n\\times n}$ is diagonalizable if and only if it has $n$ linearly independent eigenvectors.\n",
     "\n",
     "Equivalently, $A$ is digonalizable if and only if, for each eigenvalue $\\lambda$, its [geometric multiplicity matches its algebraic multiplicity](#multiplicity-defn).\n",
+    "\n",
+    "In this case, we can diagonalize $A$ as:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A = \\bm \\vv{v_1} & \\vv{v_2} & \\dots & \\vv{v_n} \\em \\bm \\lambda_1 & 0 & \\dots & 0 \\\\ 0 & \\lambda_2 & \\dots & 0 \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ 0 & 0 & \\dots & \\lambda_n \\em \\bm \\vv{v_1} & \\vv{v_2} & \\dots & \\vv{v_n} \\em^{-1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $\\lambda_1$ is the eigenvalue corresponding to $\\vv{v_1}$, and so on.\n",
     ":::\n",
     "\n",
-    "Next, \n",
+    "Next, let's look at some examples of diagonalizable and nondiagonalizable matrices:\n",
     "\n",
-    "TODO worked example of a nondigaonalizable and diagonalizable matrix\n",
-    "\n"
+    ":::{exercise} Checking diagonalizability of $2\\times 2$ matrices\n",
+    ":label:eigen-ex9\n",
+    "\n",
+    "For each of the matrices below, determine whether or not they are [diagonalizable](#diagonalizable-defn).\n",
+    "\n",
+    "1. $A = \\bm 1&0 \\\\ 1&1 \\em$\n",
+    "\n",
+    "2. $B = \\bm 3&-2\\\\2&-1 \\em$\n",
+    "\n",
+    "3. $C = \\bm 0&0\\\\0&0 \\em$\n",
+    "\n",
+    "```{solution} eigen-ex9\n",
+    ":class: dropdown\n",
+    "\n",
+    "First, let's check if $A$ is diagonalizable. Solving for the eigenvalues of $A$,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\det(A - \\lambda I) = 0 \\iff (1 - \\lambda)(-\\lambda) - 1 = 0 \\\\\n",
+    "\\iff \\lambda^2 - \\lambda - 1 = 0 \\iff \\lambda = \\frac{1\\pm \\sqrt 5}{2}\n",
+    "\\end{align*}\n",
+    "\n",
+    "We see that since $A$ has $2$ distinct eigenvalues (which is the dimension of $A$) it immediately follows from [this fact](#distinct-eigenvalue-thm) that the eigenvectors of $A$ span $\\mathbb{R}^2$, hence $A$ is diagonalizable.\n",
+    "\n",
+    "Next, let's check if $B$ is diagonalizable. Solving for the eigenvalues of $B$,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\det(B - \\lambda I) = 0 \\iff (3 - \\lambda)(-1 - \\lambda) - (-2)(2) = 0 \\\\\n",
+    "\\iff \\lambda^2 - 2\\lambda + 1 = 0 iff \\lambda = 1\n",
+    "\\end{align*}\n",
+    "\n",
+    "Since $A$ has only $1$ distinct eigenvalue, we must check the dimension of the corresponding eigenspace. Solving the eigenvector equation for $\\lambda_1 = 1$,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    (B - I) \\vv x = \\vv 0 \\iff \\bm 2&-2\\\\2&-2 \\em \\vv x = \\vv 0 \\iff \\vv x = a\\bm 1\\\\1 \\em, a \\in \\mathbb{R}\n",
+    "\\end{align*}\n",
+    "\n",
+    "We see that the corresponding eigenspace only has a dimension of $1$, meaning that the eigenvectors of $B$ do not space $\\mathbb{R}^2$, hence $B$ is not diagonalizable.\n",
+    "\n",
+    "Next, let's check if $C$ is diagonalizable. Clearly the eigenvalues of $C$ are just $0$, and the corresponding eigenspace is the entire space $\\mathbb{R}^2$. Hence $C$ is diagonalizable, and one such diagonalization is given by:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 0&0\\\\0&0 \\em = \\bm 1&0\\\\0&1\\em\\bm 0&0\\\\0&0\\em \\bm 1&0\\\\0&1\\em^{-1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "As we see, there is no direct connection between invertibility and diagonalizaibility, in the sense that one does not imply the other. You can have invertible matrices which are not diagonalizable (like $B$) and diagonalizable matrices which are not invertible (like $C$).\n",
+    "```\n",
+    ":::"
    ]
   }
  ],
